--- a/css/toolActivity.css
+++ b/css/toolActivity.css
@@ -5,6 +5,52 @@
   src: url("../font/font_zpy/iconfont.eot?#iefix") format("embedded-opentype"), url("../font/font-zpy/iconfont.woff") format("woff"), url("../font/font_zpy/iconfont.ttf") format("truetype"), url("../font/font_zpy/iconfont.svg#iconfont") format("svg");
 }
 
+/* 头部部分开始 */
+header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  background: #ff841d;
+  color: #FFFFFF;
+  height: 0.44rem;
+  line-height: 0.44rem;
+  padding: 0 0.08rem;
+  color: #fff;
+}
+
+header .back {
+  float: left;
+}
+
+header .back .iconfont {
+  font-family: "iconfont" !important;
+  font-size: .2rem;
+  font-style: normal;
+  -webkit-font-smoothing: antialiased;
+  -webkit-text-stroke-width: 0.2px;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+header .download {
+  float: right;
+  width: .3rem;
+}
+
+header .download img {
+  width: 100%;
+}
+
+header h3 {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  float: left;
+  text-align: center;
+  font-size: 0.2rem;
+  font-weight: bold;
+}
+
+/* 头部部分结束 */
 .view .contnetUl {
   padding: 5px;
   margin-bottom: 0.32rem;
