--- a/css/toolActivity.scss
+++ b/css/toolActivity.scss
@@ -4,6 +4,45 @@
     src: url('../font/font_zpy/iconfont.eot?#iefix') format('embedded-opentype'), url('../font/font-zpy/iconfont.woff') format('woff'), url('../font/font_zpy/iconfont.ttf') format('truetype'), url('../font/font_zpy/iconfont.svg#iconfont') format('svg');
 }
 
+/* 头部部分开始 */
+
+header {
+    display: flex;
+    background: #ff841d;
+    color: #FFFFFF;
+    height: 0.44rem;
+    line-height: 0.44rem;
+    padding: 0 0.08rem;
+    color: #fff;
+    .back {
+        float: left;
+        .iconfont {
+            font-family: "iconfont" !important;
+            font-size: .2rem;   
+            font-style: normal;
+            -webkit-font-smoothing: antialiased;
+            -webkit-text-stroke-width: 0.2px;
+            -moz-osx-font-smoothing: grayscale;
+        }
+    }
+    .download {
+        float: right;
+        width: .3rem;
+        img {
+            width: 100%;
+        }
+    }
+    h3 {
+        flex: 1;
+        float: left;
+        text-align: center;
+        font-size: 0.2rem;
+        font-weight: bold;
+    }
+}
+
+/* 头部部分结束 */
+
 .view {
     .contnetUl {
         padding: 5px;
@@ -51,7 +90,7 @@
                 }
             }
         }
-        li:hover{
+        li:hover {
             box-shadow: 0 0 .07rem 0 #ccc;
         }
     }
@@ -63,7 +102,7 @@
     // position: fixed;
     // bottom: 0;
     width: 100%;
-    text-align: center; 
+    text-align: center;
     background-color: #fff;
     span {
         cursor: pointer;
@@ -91,4 +130,3 @@
 }
 
 /* 分页部分结束 */
-
