--- a/css/index.scss
+++ b/css/index.scss
@@ -11,11 +11,10 @@
 header {
     height: 50px;
     background-color: #ff841d;
-    border-bottom: 1px solid #e6e6e6;
+    border-bottom: 1px solid #e6e6e6;   
     .logo {
-        width: 75%;
         float: left;
-        padding: 12px;
+        line-height: 50px;
         margin-left: 5px;
         img {
             max-width: 185px;
@@ -75,6 +74,8 @@ header {
 
 .classify {
     display: flex;
+    height: 145px;
+    overflow: hidden; 
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
@@ -92,7 +93,7 @@ header {
                 display: block;
                 width: 50px;
                 margin: 0 auto;
-                padding-bottom: 5px;
+                padding-bottom: 5px;  
             }
         }
     }
