折扣页，海淘页，国内折扣页与主页整合完毕

--- a/css/index.css
+++ b/css/index.css
@@ -254,11 +254,13 @@ header .appdown a img {
 
 .button .top {
   border-right: none;
+  padding-left: 20px;
 }
 
 .button .top img {
   width: 15px;
   height: 15px;
+  vertical-align: text-top;
 }
 
 /* 底部 */
