--- a/css/get10Top.scss
+++ b/css/get10Top.scss
@@ -13,7 +13,42 @@ body {
 /* 初始化结束 */
 
 /* 头部部分开始 */
-
+/* 头部部分开始 */
+header {
+    display: flex;
+    background: #ff841d;
+    color: #FFFFFF;
+    height: 0.44rem;
+    line-height: 0.44rem;
+    padding: 0 0.08rem;
+    color: #fff;
+    .back {
+        float: left;
+        .iconfont {
+            font-family: "iconfont" !important;
+            font-size: .2rem;   
+            font-style: normal;
+            -webkit-font-smoothing: antialiased;
+            -webkit-text-stroke-width: 0.2px;
+            -moz-osx-font-smoothing: grayscale;
+        }
+    }
+    .download {
+        float: right;
+        width: .3rem;
+        img {
+            width: 100%;
+        }
+    }
+    h3 {
+        flex: 1;
+        float: left;
+        text-align: center;
+        font-size: 0.2rem;
+        font-weight: bold;
+    }
+}   
+/* 头部部分结束 */
 /* 头部部分结束 */
 
 /* footer部分开始 */
@@ -246,3 +281,43 @@ body {
 /* 最有用的用户评价部分结束 */
 
 /* 内容部分结束 */
+
+/* 按钮 */
+
+.button {
+    background: #efefef;
+    border-top: 1px solid #c4c4c4;
+    border-bottom: 1px solid #c4c4c4;
+    height: 34px;
+    line-height: 34px;
+    margin-top: 25px;
+    a {
+        display: block;
+        float: left;
+        font-size: 14px;
+        border-right: 1px solid #c4c4c4;
+        text-align: center;
+        width: 30%;
+    }
+    .top {
+        border-right: none;
+        padding-left: 20px;
+        img {
+            width: 15px;
+            height: 15px;
+            vertical-align:  text-top;
+        }
+    }
+}
+
+/* 底部 */
+
+footer {
+    text-align: center;
+    margin-top: 10px;
+    p {
+        a:nth-child(1) {
+            color: red;
+        }
+    }
+}
