--- a/css/index.scss
+++ b/css/index.scss
@@ -232,9 +232,11 @@ header {
     }
     .top {
         border-right: none;
+        padding-left: 20px;
         img {
             width: 15px;
             height: 15px;
+            vertical-align:  text-top;
         }
     }
 }
