--- a/css/top10brand.css
+++ b/css/top10brand.css
@@ -12,6 +12,50 @@ body {
 
 /* 初始化结束 */
 /* 头部部分开始 */
+header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  background: #ff841d;
+  color: #FFFFFF;
+  height: 0.44rem;
+  line-height: 0.44rem;
+  padding: 0 0.08rem;
+  color: #fff;
+}
+
+header .back {
+  float: left;
+}
+
+header .back .iconfont {
+  font-family: "iconfont" !important;
+  font-size: .2rem;
+  font-style: normal;
+  -webkit-font-smoothing: antialiased;
+  -webkit-text-stroke-width: 0.2px;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+header .download {
+  float: right;
+  width: .3rem;
+}
+
+header .download img {
+  width: 100%;
+}
+
+header h3 {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  float: left;
+  text-align: center;
+  font-size: 0.2rem;
+  font-weight: bold;
+}
+
 /* 头部部分结束 */
 /* footer部分开始 */
 /* footer部分结束 */
@@ -76,4 +120,43 @@ body {
 }
 
 /* 内容部分结束 */
+/* 按钮 */
+.button {
+  background: #efefef;
+  border-top: 1px solid #c4c4c4;
+  border-bottom: 1px solid #c4c4c4;
+  height: 34px;
+  line-height: 34px;
+  margin-top: 25px;
+}
+
+.button a {
+  display: block;
+  float: left;
+  font-size: 14px;
+  border-right: 1px solid #c4c4c4;
+  text-align: center;
+  width: 30%;
+}
+
+.button .top {
+  border-right: none;
+  padding-left: 20px;
+}
+
+.button .top img {
+  width: 15px;
+  height: 15px;
+  vertical-align: text-top;
+}
+
+/* 底部 */
+footer {
+  text-align: center;
+  margin-top: 10px;
+}
+
+footer p a:nth-child(1) {
+  color: red;
+}
 /*# sourceMappingURL=top10brand.css.map */
